# instagram-scraper

./: .gitignore  README.md  examen.md  main.py  pyproject.toml  requirements.txt
src/instagram_scraper/: __init__.py  auth.py  browser_scraper.py  cli.py  config.py  scraper.py  utils.py
